# emlinux-ssd1935

./: README.md  README.txt  build_all.sh  kernel
BSP/non_oss/: build.sh  gpio  magus-i2s  magus-pcm  piu
BSP/oss/: build.sh
apps/non_oss/: ._build.sh
apps/oss/: ._build.sh  build.sh
configs/: VERSION  env  sys_id.txt
configs/etc/: AVTransport.xml  ConnectionManager.xml  buildtime  customer.info  fonts  icons  inputrc  l10n  mdev.conf  upnpcp.caplist
configs/kernel/: kernel-config  kernel-config.bak
configs/profiles/: TEAC_WAP8900  TEAC_WAP8900_VERSION  load_bmp32_ssl
libs/: non_gpl
libs/oss/: build.sh
libs/oss/others/MPL/mpeg4ip-1.2/lib/utils/: Makefile.am  Makefile.in  Makefile.in.org  Makefile.org  configure  configure.in  mpeg4ip_utils.h  url.c
libs/oss/others/MPL/mpeg4ip-1.2/lib/utils/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
libs/oss/others/MPL/mpeg4ip-1.2/player/lib/rtsp/: Makefile.am  Makefile.in  Makefile.in.org  Makefile.org  configure  configure.in  rtsp.c  rtsp_client.h  rtsp_comm.c  rtsp_command.c  rtsp_private.h  rtsp_resp.c  rtsp_thread.c  rtsp_thread_nx.c  rtsp_util.c
libs/oss/others/MPL/mpeg4ip-1.2/player/lib/rtsp/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
nboot/: Makefile
nboot/ddrtune/: Makefile  arm.s  ddrtune.c  ddrtune.map  debug.h  dma.c  dma.h  dmacapi.c  dmacapi.h  dmactype.h  gpt.c  gpt.h  gpttype.h  lds  mytypes.h  nand.c  nfc.c  platform.h  sdrtype.h  str.c  str.h  uart.h
toolchain/: README.txt
tools/: checksum  count_rd_version.sh  e2fsimage  e2fsimage4  genimage.sh  genproductionimage.sh  gentag  kernel_version  mkfs.cramfs  rechksum  sysid.sh
(+2959 files in other folders)
