dnl Process this file with autoconf to produce a configure script.
AC_INIT(mpeg4ip_utils.h)
AM_INIT_AUTOMAKE(libutils,1.0)
dnl Checks for programs.
dnl AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_HEADER_STDC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strtod strtoul)

AC_OUTPUT(Makefile)
